# oric2-golden-model

./: .gitignore  CHANGELOG  CIRRUS_OS  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  POPEYE_RESPONSE.md  README.md  ROADMAP  VERSION_TRACKING  cast-play.sh  test_cpu  test_io  test_memory
docs/: AGILE_PLAN.md  COMPATIBILITY.md  orictel-modem-hayes.md  orictel-release-notes.md  orictel-serial-guide.md
docs/api/: README.md
docs/user-guide/: README.md
examples/: graphics.bas  graphics.tap  hello.bas  hello.tap  keytest.bas  keytest.tap  serial_test.bas  serial_test.tap  sound.bas  sound.tap  ula2_demo.bas  ula2_demo.tap  ula2_fulldemo.bas  ula2_fulldemo.tap
include/: debugger.h  emulator.h  savestate.h
include/audio/: audio.h
include/cpu/: cpu6502.h  cpu65c816.h  cpu_core.h  cpu_internal.h  cpu_types.h  opcode_metadata.h
include/hostfs/: hostfs.h
include/io/: acia6551.h  gpu_device.h  joystick.h  keyboard.h  mcp40.h  microdisc.h  printer.h  sd_device.h  serial_backend.h  via6522.h  vram_device.h
include/memory/: memory.h
include/network/: cast_server.h
include/storage/: disk.h  sedoric.h  tap.h
include/utils/: logging.h  profiler.h  rominfo.h  trace.h
include/video/: compositor.h  export.h  hires_oric2.h  video.h
src/: debugger.c  main.c  savestate.c
src/audio/: audio_output.c  ay3891x.c
src/cpu/: addressing.c  cpu6502.c  cpu65c816.c  cpu65c816_opcodes.c  cpu_core.c  opcode_metadata.c  opcodes.c
src/hostfs/: hostfs.c  vfs.c
src/io/: acia6551.c  cassette.c  gpu_device.c  joystick.c  keyboard.c  mcp40.c  microdisc.c  printer.c  sd_device.c  serial_backend.c  via6522.c  vram_device.c
src/memory/: banking.c  memory.c
src/network/: cast_server.c  castv2.c
src/storage/: disk.c  sedoric.c  tap.c
src/utils/: config.c  logging.c  profiler.c  rominfo.c  trace.c
src/video/: compositor.c  export.c  hires.c  hires_oric2.c  renderer.c  textmode.c  video.c
tests/golden/: oricos_boot.ppm
tests/integration/: test_compositor_hires_oric2.c  test_full_system.c  test_klaus_dormann.c  test_oric_boot_dual.c  test_oricos_boot.c  test_oricos_gpu.c  test_oricos_hires2.c  test_oricos_live_alloc.c  test_oricos_sd.c  test_oricos_visual.c  test_oricos_vram.c  test_oricos_window.c  test_paravirt_demo.c
tests/unit/: test_atmos.c  test_audio.c  test_cast.c  test_compositor.c  test_coverage.c  test_cpu.c  test_cpu65c816.c  test_cpu65c816_e_mode.c  test_cpu65c816_native.c  test_cpu_core.c  test_debugger.c  test_full_system.c  test_gpu_device.c  test_hires_oric2.c  test_io.c  test_joystick.c  test_mcp40.c  test_memory.c  test_oric2_memory.c  test_printer.c  test_profiler.c  test_renderer.c  test_rom.c  test_rominfo.c  test_savestate.c  test_serial.c  test_storage.c  test_trace.c  test_video.c  test_vram_device.c
tools/: bas2tap.c  bin2tap.c  gen_test_tap.c  mktap_serial.c  tap2sedoric.c
